# be-major-backend

./: .gitignore  build.sh  pyproject.toml  render.yaml
config/: settings.py  urls.py
moim_types/: admin.py  apps.py  models.py  serializers.py
moim_types/management/commands/: generate_moim_types.py
moims/: admin.py  models.py  serializers.py  urls.py  views.py
portfolios/: admin.py  models.py  serializers.py  urls.py  views.py
topics/: admin.py  models.py  serializers.py
topics/management/commands/: generate_topics.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
