[tool.poetry]
name = "be-major-backend"
version = "0.1.0"
description = ""
authors = ["SHY <ekdmbzzang@naver.com>"]
readme = "README.md"
packages = [{include = "be_major_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
pillow = "^9.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
